--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,9 @@
 @import url('./base/reset.css');
 @import url('./base/base.css');
 @import url('./base/container.css');
+
+@import url('./layout/hero.css');
+@import url('./layout/cards.css');
+@import url('./layout/modal.css');
+@import url('./layout/pagination.css');
+@import url('./layout/footer.css');
