--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,14 @@
 <footer class="footer">
   <div class="container">
     <p class="footer-desc">
-      Made with ✨ by
+      © 2021 | All Rights Reserved | Developed with ♥ by
       <a
         class="footer-link"
         href="https://goit.global/ua/"
         target="_blank"
         rel="noopener noreferrer"
       >
-        GoIT team
+        GoIT Students
       </a>
     </p>
   </div>
