--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,7 @@
 @import url('./base/base.css');
 @import url('./base/container.css');
 
-@import url('./layout/hero.css');
+@import url('./layout/header.css');
 @import url('./layout/cards.css');
 @import url('./layout/modal.css');
 @import url('./layout/pagination.css');
