--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
     <p class="footer-desc">
-      © 2021 | All Rights Reserved | Developed with ♥ by
+      © 2021 | All Rights Reserved | Developed with ❤️ by
       <a
         class="footer-link"
         href="https://goit.global/ua/"
