--- a/src/css/base/base.css
+++ b/src/css/base/base.css
@@ -1,7 +1,9 @@
 :root {
+  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
   font-family: 'Montserrat', serif;
-
-  --animation: 350ms linear;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 400;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -9,33 +11,3 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
-/* / */
-/* 
-::-webkit-scrollbar {
-  width: 9px;
-}
-
-::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.2);
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #dc56c5;
-  border-radius: 3px;
-}
-
-modal scrollbar
-.modal::-webkit-scrollbar {
-  width: 5px;
-}
-
-.modal::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0.2);
-  margin: 15px;
-}
-
-.modal::-webkit-scrollbar-thumb {
-  background-color: #dc56c5;
-  border-radius: 15px;
-} */
