--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -47,6 +47,7 @@
           type="search"
           class="header__form__input"
           placeholder="Choose country"
+          id="countryInput"
         />
         <button type="button" class="header__form__button" id="countryButton">
           <svg
@@ -56,6 +57,7 @@
             height="8"
             viewBox="0 0 13 8"
             fill="none"
+            class="arrowIcon"
           >
             <path
               d="M6.5 8L0.00480968 0.5L12.9952 0.499999L6.5 8Z"
@@ -63,31 +65,24 @@
             />
           </svg>
         </button>
+        <select name="countries" id="countryList" class="header__select" placeholder="">
+          <optgroup id="europe" label="Europe"></optgroup>
+          <hr />
+          <optgroup id="northamerica" label="North America"></optgroup>
+          <hr />
+          <optgroup id="southamerica" label="South America"></optgroup>
+          <hr />
+          <optgroup id="asia" label="Asia"></optgroup>
+          <hr />
+          <optgroup id="africa" label="Africa"></optgroup>
+          <hr />
+          <optgroup id="oceania" label="Oceania"></optgroup>
+          <hr />
+        </select>
       </label>
     </form>
 
-    <select name="countries" id="countryList" class="header__select">
-      <option value=""></option>
-      <optgroup id="europe" label="Europe"></optgroup>
-      <hr />
-      <optgroup id="northamerica" label="North America"></optgroup>
-      <hr />
-      <optgroup id="southamerica" label="South America"></optgroup>
-      <hr />
-      <optgroup id="asia" label="Asia"></optgroup>
-      <hr />
-      <optgroup id="africa" label="Africa"></optgroup>
-      <hr />
-      <optgroup id="oceania" label="Oceania"></optgroup>
-      <hr />
-    </select>
-
-    <!-- <div class="custom-select">
-        <div class="selected">Choose a country</div>
-        <div class="options">
-          
-        </div>
-      </div> -->
+    
       
   </div>
 </section>
