--- a/src/partials/cards.html
+++ b/src/partials/cards.html
@@ -1,6 +1,5 @@
 <section class="cards__section">
   <div class="container">
-    <ul class="cards__list" id="js-list">
-    </ul>
+    <ul class="cards__list" id="js-list"></ul>
   </div>
 </section>
