--- a/src/css/layout/cards.css
+++ b/src/css/layout/cards.css
@@ -9,7 +9,6 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-
   gap: 40px 20px;
 }
 
@@ -17,7 +16,7 @@
   width: 130px;
   text-align: center;
   position: relative;
-  transition: transform var(--animation);
+  transition: transform 350ms linear;
 }
 
 .cards__item:hover {
@@ -56,15 +55,20 @@
   font-size: 14px;
 }
 
-.cards__place {
+.cards__location {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  gap: 5px;
+  gap: 3px;
   font-size: 12px;
   font-weight: 600;
   margin-top: 5px;
+}
+
+.cards__icon {
+  width: 6px;
+  height: 9px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -93,8 +97,13 @@
     font-size: 16px;
   }
 
-  .cards__place {
+  .cards__location {
     font-size: 14px;
+  }
+
+  .cards__icon {
+    width: 7px;
+    height: 10px;
   }
 }
 
