--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,8 @@
 <footer class="footer">
   <div class="container">
     <p class="footer-desc">
-      © 2021 | All Rights Reserved | Developed with ♥ by
-      <a
-        class="footer-link"
-        href="https://goit.global/ua/"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
+      © 2021 | All Rights Reserved | Developed with 🖤 by
+      <a class="footer-link" href="https://goit.global/ua/" target="_blank" rel="noopener noreferrer">
         GoIT Students
       </a>
     </p>
