--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,15 +1,5 @@
 <section class="pagination__section">
   <div class="container">
-    <ul class="pagination__list">
-      <li class="pagination__list__item">
-        <button class="pagination__list__button active">1</button>
-      </li>
-      <li class="pagination__list__item">
-        <button class="pagination__list__button">2</button>
-      </li>
-      <li class="pagination__list__item">
-        <button class="pagination__list__button">3</button>
-      </li>
-    </ul>
+    <ul class="pagination__list"></ul>
   </div>
 </section>
