--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,15 +19,16 @@
     </a>
 
     <h1 class="header__title">FIND BEST EVENTS <br />AROUND THE WORLD</h1>
-    <form class="header__form">
+    <form class="header__form" id="headerForm">
       <label class="header__form__label">
         <input
           type="text"
           class="header__form__input"
           placeholder="Start searching"
           pattern="[A-Za-z]+"
+          id="searchInput"
         />
-        <button type="button" class="header__form__button search__button" id="searchButton">
+        <button type="submit" class="header__form__button search__button" id="searchButton">
           <svg
             id="headerInputIcon"
             xmlns="http://www.w3.org/2000/svg"
