--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -37,6 +37,13 @@
 
 .header__form__label {
     position: relative;
+    border-radius: 20px;
+    transition: all 0.4s ease;
+}
+
+.header__form__label:hover, .header__form__label:focus {
+    transform: scale(1.05);
+    box-shadow: 0 0 5px #DC56C5, 0 0 20px #DC56C5;
 }
 
 .header__form__input {
@@ -141,12 +148,8 @@
     background-color: #303030;
 }
 
-.select__option:not(last-child) {
-    /* border-bottom: 1px solid #0b0b0b; */
-}
-
 .open {
-    /* display: block; */
+    display: block;
 }
   
 
