--- a/src/css/layout/cards.css
+++ b/src/css/layout/cards.css
@@ -16,7 +16,7 @@
   width: 130px;
   text-align: center;
   position: relative;
-  transition: transform 350ms linear;
+  transition: all 350ms linear;
 }
 
 .cards__item:hover {
@@ -41,6 +41,13 @@
   height: 161px;
   border-radius: 50px 0px;
   object-fit: cover;
+  transition: all 350ms linear;
+}
+
+.cards__img:hover {
+  box-shadow: 15px 10px 34px 0px rgba(220, 86, 197, 0.65);
+  -webkit-box-shadow: 15px 10px 34px 0px rgba(220, 86, 197, 0.65);
+  -moz-box-shadow: 15px 10px 34px 0px rgba(220, 86, 197, 0.65);
 }
 
 .cards__event {
