--- a/src/css/layout/cards.css
+++ b/src/css/layout/cards.css
@@ -1,8 +1,14 @@
 .cards__section {
-  background-color: black;
   color: white;
   padding-top: 25px;
   padding-bottom: 60px;
+
+  background-image: url('/imgs/bg-body.png');
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  min-height: 400px;
 }
 
 .cards__list {
