--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -1,74 +1,78 @@
 .header {
-    background-image: linear-gradient(rgba(11, 11, 11, 0.5), rgba(11, 11, 11, 0.5)), url('/imgs/header/mobile.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 364px;
+  background-image: linear-gradient(
+      rgba(11, 11, 11, 0.5),
+      rgba(11, 11, 11, 0.5)
+    ),
+    url('/imgs/header/mobile.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 364px;
 }
 
 .header__logo__link {
-    position: absolute;
-    top: 0;
-    left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .header__logo__image {
-    width: 106px;
-    height: 90px;
+  width: 106px;
+  height: 90px;
 }
 
 .header__title {
-    color: #DC56C5;
-    text-align: center;
-    font-weight: 900;
-    font-size: 18px;
-    line-height: normal;
+  color: #dc56c5;
+  text-align: center;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: normal;
 
-    margin-bottom: 25px;
-    padding-top: 80px;
+  margin-bottom: 25px;
+  padding-top: 80px;
 }
 
 .header__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
 }
 
 .header__form__label {
-    position: relative;
-    border-radius: 20px;
-    transition: all 0.4s ease;
+  position: relative;
+  border-radius: 20px;
+  transition: all 0.4s ease;
 }
 
-.header__form__label:hover, .header__form__label:focus {
-    transform: scale(1.05);
-    box-shadow: 0 0 5px #DC56C5, 0 0 20px #DC56C5;
+.header__form__label:hover,
+.header__form__label:focus {
+  transform: scale(1.05);
+  box-shadow: 0 0 5px #dc56c5, 0 0 20px #dc56c5;
 }
 
 .header__form__input {
-    padding: 10px 50px 10px 30px;
-    outline: none;
+  padding: 10px 50px 10px 30px;
+  outline: none;
 
-    color: #939393;
-    font-size: 16px;
-    font-weight: 400;
-    font-family: 'Montserrat', serif;
+  color: #939393;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: 'Montserrat', serif;
 
+  width: 270px;
+  height: 40px;
 
-    width: 270px;
-    height: 40px;
-
-    border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.20);
-    backdrop-filter: blur(10px);
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(10px);
 }
 
 .header__form__input::placeholder {
-    font-family: 'Montserrat', serif;
-    color: #939393;
-    font-size: 16px;
-    font-weight: 400;
+  font-family: 'Montserrat', serif;
+  color: #939393;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 /* .header__form__input::-ms-value {
@@ -76,120 +80,126 @@
 } */
 
 .header__form__input::selection {
-    background-color: #DC56C5;
-    color: #939393;
+  background-color: #dc56c5;
+  color: #939393;
 }
 
 .header__form__button {
-    position: absolute;
-    top: 12px;
-    right: 30px;
-    background-color: transparent;
-    border: none;
-    width: 20px;
-    height: 20px;
+  position: absolute;
+  top: 12px;
+  right: 30px;
+  background-color: transparent;
+  border: none;
+  width: 20px;
+  height: 20px;
 }
-
 
 .country__button {
-    top: 11px;
+  top: 11px;
 }
- 
-.header__select {
-    outline: none;
-    width: 20px;
-    height: 20px;
 
-    position: absolute;
-    top: 11px;
-    right: 30px;
-    appearance: none;
-    background: url('/src/imgs/icons/symbol-defs.svg#arrow') no-repeat right 10px center;
+.header__select {
+  outline: none;
+  width: 20px;
+  height: 20px;
+
+  position: absolute;
+  top: 11px;
+  right: 30px;
+  appearance: none;
+  background: url('/src/imgs/icons/symbol-defs.svg#arrow') no-repeat right 10px
+    center;
 }
 
 .header__form__button {
-    transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 .header__form__button:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .header__select {
-    z-index: 10000;
+  z-index: 10000;
 }
 
 .header__selected {
 }
 
 .flag__img {
-    width: 30px;
-    height: 17.75px;
-    margin-right: 10px;
-    border: 1px solid #939393;
+  width: 30px;
+  height: 17.75px;
+  margin-right: 10px;
+  border: 1px solid #939393;
 }
 
 .header__dropdown {
-    color: #939393;
-    background-color: #0b0b0b;
-    width: 200px;
-    border-radius: 15px;
-    box-shadow: 0 0 2px #DC56C5, 0 0 15px #DC56C5;
+  color: #939393;
+  background-color: #0b0b0b;
+  width: 200px;
+  border-radius: 15px;
+  box-shadow: 0 0 2px #dc56c5, 0 0 15px #dc56c5;
 }
 
 .select__option {
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-    
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
 }
 
 .select__option:hover {
-    background-color: #303030;
+  background-color: #303030;
 }
 
 .open {
-    display: block;
+  display: block;
 }
-  
 
 @media only screen and (min-width: 768px) {
-    .header {
-        background-image: linear-gradient(rgba(11, 11, 11, 0.5), rgba(11, 11, 11, 0.5)), url('/imgs/header/tablet.jpg');
-    }
+  .header {
+    background-image: linear-gradient(
+        rgba(11, 11, 11, 0.5),
+        rgba(11, 11, 11, 0.5)
+      ),
+      url('/imgs/header/tablet.jpg');
+  }
 
-    .header__logo__image {
-        width: 182px;
-        height: 151px;
-    }
+  .header__logo__image {
+    width: 182px;
+    height: 151px;
+  }
 
-    .header__title {
-        font-size: 30px;
-        padding-top: 40px;
-        line-height: 38px;
-    }
+  .header__title {
+    font-size: 30px;
+    padding-top: 40px;
+    line-height: 38px;
+  }
 
-    .header__form {
-        flex-direction: row;
-        justify-content: center;
-        gap: 30px;
-    }
+  .header__form {
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
-    .header {
-        background-image: linear-gradient(rgba(11, 11, 11, 0.5), rgba(11, 11, 11, 0.5)), url('/imgs/header/desktop.jpg');
-        height: 446px;
-    }
+  .header {
+    background-image: linear-gradient(
+        rgba(11, 11, 11, 0.5),
+        rgba(11, 11, 11, 0.5)
+      ),
+      url('/imgs/header/desktop.jpg');
+    height: 446px;
+  }
 
-    .header__logo__image {
-        width: 210px;
-        height: 160px;
-    }
+  .header__logo__image {
+    width: 210px;
+    height: 160px;
+  }
 
-    .header__title {
-        font-size: 50px;
-        line-height: normal;
-        margin-bottom: 52px;
-    }
+  .header__title {
+    font-size: 50px;
+    line-height: normal;
+    margin-bottom: 52px;
+  }
 }
