--- a/src/css/base/base.css
+++ b/src/css/base/base.css
@@ -1,5 +1,4 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
   font-family: 'Montserrat', serif;
   font-size: 16px;
   line-height: 1.5;
@@ -17,4 +16,19 @@
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
+
+  min-height: 600px;
+}
+
+*::-webkit-scrollbar {
+  width: 7px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #dc56c5;
+  border-radius: 5px;
 }
