--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,30 +1,16 @@
 .footer {
-  padding: 60px 0 27px 0;
+  margin-top: 67px;
+  margin-bottom: 27px;
 }
 
 .footer-desc {
   color: #939393;
   text-align: center;
-  font-family: Montserrat;
   font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
 }
 
 @media only screen and (min-width: 768px) {
-  .footer {
-    padding-bottom: 18px;
-  }
-
   .footer-desc {
     font-size: 16px;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .footer {
-    background-color: #fff;
-    padding: 63px 0 19px 0;
   }
 }
