--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,13 +30,13 @@
             <path d="M6.5 8L0.00480968 0.5L12.9952 0.499999L6.5 8Z" fill="#939393" />
           </svg>
         </button>
-        <div class="header__select">
+        <!-- <div class="header__select">
           <div class="header__selected">
             <img id="selectedFlag" src="" alt="" class="flag__img" />
           </div>
           <ul class="header__dropdown">
           </ul>
-        </div>
+        </div> -->
       </label>
     </form>
 
